Have CI install jack before cargo build

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Dependencies
+      run: sudo apt-get install jackd
     - name: Build
       run: cargo build --verbose
     - name: Clippy
